[gd_scene load_steps=4 format=3 uid="uid://bmqvq30sk46d1"]

[ext_resource type="Script" uid="uid://dspm826qa12k4" path="res://player_area.gd" id="1_6bnte"]
[ext_resource type="LabelSettings" uid="uid://c5ycfya34bm71" path="res://big_label_text.tres" id="1_bn7dt"]
[ext_resource type="Script" uid="uid://0o4rswyw48ao" path="res://hand_container.gd" id="3_6bnte"]

[node name="Seat7" type="VBoxContainer"]
custom_minimum_size = Vector2(160, 220)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6bnte")

[node name="NameScoreLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Name: 0"
label_settings = ExtResource("1_bn7dt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HandArea" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="HandContainer" type="Control" parent="HandArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.994946)
script = ExtResource("3_6bnte")

[node name="CenterMarker" type="Marker2D" parent="HandArea/HandContainer"]
position = Vector2(77, 53.2692)
scale = Vector2(1.68047, 2.13151)

[node name="HandScoreLabel" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Hand: 0"
label_settings = ExtResource("1_bn7dt")
horizontal_alignment = 1
vertical_alignment = 1
